// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bend (a) analytic UV fold over a generator > folds Bend.uvRemap into the generator sample coordinate (inline, no RTT) > final-pass-uvremap 1`] = `
"fn edgeClampUV(uv: vec2f) -> vec2f {
  return clamp(uv, vec2f(), vec2f(1));
}

fn bendRemap(strength: f32, falloff: f32, angle: f32, uv: vec2f, aspect: f32) -> vec2f {
  let angleRad = (angle * 0.017453292519943295f);
  let dir = vec2f(cos(angleRad), sin(angleRad));
  let perp = vec2f((dir.y * -1f), dir.x);
  let p = vec2f(((uv.x - 0.5f) * aspect), (uv.y - 0.5f));
  let sScreen = dot(p, dir);
  let tScreen = dot(p, perp);
  let sHalf = max((((abs(dir.x) * aspect) + abs(dir.y)) * 0.5f), 1e-3f);
  let snScreen = (sScreen / sHalf);
  let b = (strength * 1.2f);
  let f = (clamp(falloff, 0f, 1f) * 0.9f);
  let fSpan = (1f - f);
  let m = abs(snScreen);
  let sig = select(-1f, 1f, (snScreen >= 0f));
  let a2 = (b * m);
  let disc = (((4f * fSpan) * fSpan) + (((4f * a2) * 2f) * (m - f)));
  let nearZero = (abs(a2) < 1e-5f);
  let denom = select((a2 * 2f), 1f, nearZero);
  let uQuad = ((sqrt(max(disc, 0f)) - (2f * fSpan)) / denom);
  let uOn = select(uQuad, ((m - f) / fSpan), nearZero);
  let u = select(6f, max(uOn, 0f), (disc >= 0f));
  let snBend = (sig * (f + (u * fSpan)));
  let inFlat = (m <= f);
  let sn = select(snBend, snScreen, inFlat);
  let z = select(((b * u) * u), 0f, inFlat);
  let tSrc = ((tScreen * (2f - z)) / 2f);
  let srcP = ((dir * (sn * sHalf)) + (perp * tSrc));
  return vec2f(((srcP.x / aspect) + 0.5f), (srcP.y + 0.5f));
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  strength: f32,
  falloff: f32,
  angle: f32,
  edges: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_2 {
  seed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_bn: padded_1,
  n_gen: padded_2,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn genBody(seed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, seed, 1f);
}

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  let foldUV_0 = edgeClampUV(bendRemap(uniforms.n_bn.strength, uniforms.n_bn.falloff, uniforms.n_bn.angle, uv, uniforms._sys.aspect));
  var composed_1 = genBody(uniforms.n_gen.seed, foldUV_0);
  return vec4f(linearToSrgb(tone_linear(composed_1.rgb)), composed_1.a);
}"
`;

exports[`Bend (b) RTT filter path (fragment) > converts the child to a texture, samples the bent coordinate, unpremultiplies > final-pass-fragment 1`] = `
"fn bendRemap(strength: f32, falloff: f32, angle: f32, uv: vec2f, aspect: f32) -> vec2f {
  let angleRad = (angle * 0.017453292519943295f);
  let dir = vec2f(cos(angleRad), sin(angleRad));
  let perp = vec2f((dir.y * -1f), dir.x);
  let p = vec2f(((uv.x - 0.5f) * aspect), (uv.y - 0.5f));
  let sScreen = dot(p, dir);
  let tScreen = dot(p, perp);
  let sHalf = max((((abs(dir.x) * aspect) + abs(dir.y)) * 0.5f), 1e-3f);
  let snScreen = (sScreen / sHalf);
  let b = (strength * 1.2f);
  let f = (clamp(falloff, 0f, 1f) * 0.9f);
  let fSpan = (1f - f);
  let m = abs(snScreen);
  let sig = select(-1f, 1f, (snScreen >= 0f));
  let a2 = (b * m);
  let disc = (((4f * fSpan) * fSpan) + (((4f * a2) * 2f) * (m - f)));
  let nearZero = (abs(a2) < 1e-5f);
  let denom = select((a2 * 2f), 1f, nearZero);
  let uQuad = ((sqrt(max(disc, 0f)) - (2f * fSpan)) / denom);
  let uOn = select(uQuad, ((m - f) / fSpan), nearZero);
  let u = select(6f, max(uOn, 0f), (disc >= 0f));
  let snBend = (sig * (f + (u * fSpan)));
  let inFlat = (m <= f);
  let sn = select(snBend, snScreen, inFlat);
  let z = select(((b * u) * u), 0f, inFlat);
  let tSrc = ((tScreen * (2f - z)) / 2f);
  let srcP = ((dir * (sn * sHalf)) + (perp * tSrc));
  return vec2f(((srcP.x / aspect) + 0.5f), (srcP.y + 0.5f));
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  strength: f32,
  falloff: f32,
  angle: f32,
  edges: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_2 {
  seed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_bn: padded_1,
  n_gen: padded_2,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

@group(1) @binding(0) var rtt_0: texture_2d<f32>;

fn catmullRomAxisPositions(uv: f32, texSize: f32) -> vec3f {
  let samplePos = (uv * texSize);
  let texPos1 = (floor((samplePos - 0.5f)) + 0.5f);
  let f = (samplePos - texPos1);
  let w1 = (1f + ((f * f) * (-2.5f + (1.5f * f))));
  let w2 = (f * (0.5f + (f * (2f - (1.5f * f)))));
  let w12 = max((w1 + w2), 1e-6f);
  let offset12 = (w2 / w12);
  return vec3f(((texPos1 - 1f) / texSize), ((texPos1 + offset12) / texSize), ((texPos1 + 2f) / texSize));
}

fn catmullRomAxisWeights(uv: f32, texSize: f32) -> vec3f {
  let samplePos = (uv * texSize);
  let texPos1 = (floor((samplePos - 0.5f)) + 0.5f);
  let f = (samplePos - texPos1);
  let w0 = (f * (-0.5f + (f * (1f - (0.5f * f)))));
  let w1 = (1f + ((f * f) * (-2.5f + (1.5f * f))));
  let w2 = (f * (0.5f + (f * (2f - (1.5f * f)))));
  let w3 = ((f * f) * (-0.5f + (0.5f * f)));
  return vec3f(w0, (w1 + w2), w3);
}

@group(2) @binding(0) var linearClamp: sampler;

fn overComposite(base: vec4f, blended: vec3f, overlayAlpha: f32) -> vec4f {
  let baseWeight = (base.w * (1f - overlayAlpha));
  let finalAlpha = (overlayAlpha + baseWeight);
  let rgb = ((blended * overlayAlpha) + (base.xyz * baseWeight));
  return vec4f(rgb, finalAlpha);
}

fn blend_normal(base: vec4f, overlay2: vec4f, opacity: f32) -> vec4f {
  let overlayAlpha = (overlay2.w * opacity);
  return overComposite(base, overlay2.xyz, overlayAlpha);
}

fn unpremultiplyAlpha(color2: vec4f) -> vec4f {
  let alpha = color2.w;
  let straightRGB = select(vec3f(), (color2.xyz / alpha), (alpha > 1e-3f));
  return vec4f(straightRGB, alpha);
}

fn edgeTransparentMask(uv: vec2f) -> f32 {
  let inX = (step(0f, uv.x) * step(uv.x, 1f));
  let inY = (step(0f, uv.y) * step(uv.y, 1f));
  return (inX * inY);
}

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  let crUV_0 = bendRemap(uniforms.n_bn.strength, uniforms.n_bn.falloff, uniforms.n_bn.angle, uv, uniforms._sys.aspect);
  let crSize_1 = vec2f(textureDimensions(rtt_0));
  let crPosX_2 = catmullRomAxisPositions(crUV_0.x, crSize_1.x);
  let crPosY_3 = catmullRomAxisPositions(crUV_0.y, crSize_1.y);
  let crWx_4 = catmullRomAxisWeights(crUV_0.x, crSize_1.x);
  let crWy_5 = catmullRomAxisWeights(crUV_0.y, crSize_1.y);
  var crOut_6 = vec4f(0.0, 0.0, 0.0, 0.0);
  crOut_6 += textureSample(rtt_0, linearClamp, vec2f(crPosX_2.x, crPosY_3.x)) * (crWx_4.x * crWy_5.x);
  crOut_6 += textureSample(rtt_0, linearClamp, vec2f(crPosX_2.y, crPosY_3.x)) * (crWx_4.y * crWy_5.x);
  crOut_6 += textureSample(rtt_0, linearClamp, vec2f(crPosX_2.z, crPosY_3.x)) * (crWx_4.z * crWy_5.x);
  crOut_6 += textureSample(rtt_0, linearClamp, vec2f(crPosX_2.x, crPosY_3.y)) * (crWx_4.x * crWy_5.y);
  crOut_6 += textureSample(rtt_0, linearClamp, vec2f(crPosX_2.y, crPosY_3.y)) * (crWx_4.y * crWy_5.y);
  crOut_6 += textureSample(rtt_0, linearClamp, vec2f(crPosX_2.z, crPosY_3.y)) * (crWx_4.z * crWy_5.y);
  crOut_6 += textureSample(rtt_0, linearClamp, vec2f(crPosX_2.x, crPosY_3.z)) * (crWx_4.x * crWy_5.z);
  crOut_6 += textureSample(rtt_0, linearClamp, vec2f(crPosX_2.y, crPosY_3.z)) * (crWx_4.y * crWy_5.z);
  crOut_6 += textureSample(rtt_0, linearClamp, vec2f(crPosX_2.z, crPosY_3.z)) * (crWx_4.z * crWy_5.z);
  crOut_6 = max(crOut_6, vec4f(0.0, 0.0, 0.0, 0.0));
  var composed_7 = blend_normal(vec4f(1.0, 1.0, 1.0, 0.0), unpremultiplyAlpha(vec4f(crOut_6.rgb, (crOut_6.a * edgeTransparentMask(bendRemap(uniforms.n_bn.strength, uniforms.n_bn.falloff, uniforms.n_bn.angle, uv, uniforms._sys.aspect))))), uniforms.n_bn._opacity);
  return vec4f(linearToSrgb(tone_linear(composed_7.rgb)), composed_7.a);
}"
`;
